[tool.poetry]
name = "mixology-api"
version = "0.1.0"
description = ""
authors = ["Michał Chrostowski <mchrostowski99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103"
pydantic = "^2"
SQLAlchemy = "^2"
alembic = "^1"
uvicorn = "^0.23"
pydantic-settings = "^2"
psycopg = "^3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
